--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "build": "tsc && babel src --out-dir dist --extensions .ts --source-maps true",
     "commitlint": "commitlint --from develop",
-    "lint": "eslint . --ext .ts,.js,.mjs",
+    "lint": "prettier . --check && eslint . --ext .ts,.js,.mjs",
+    "format": "prettier . --write",
     "test": "mocha './test/'",
     "test:watch": "mocha './test/' --watch",
     "prepare": "npm run build",
@@ -61,6 +62,7 @@
     "memfs": "^3.5.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
+    "prettier": "^3.3.3",
     "standard-version": "^9.5.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
