--- a/babel.config.json
+++ b/babel.config.json
@@ -1,13 +1,16 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "include": [
-        "@babel/plugin-proposal-nullish-coalescing-operator",
-        "@babel/plugin-proposal-logical-assignment-operators"
-      ]
-      // TODO: switch to ESM after resolving https://github.com/webpack/webpack/issues/15930
-      // "modules": false
-    }],
+    [
+      "@babel/preset-env",
+      {
+        "include": [
+          "@babel/plugin-proposal-nullish-coalescing-operator",
+          "@babel/plugin-proposal-logical-assignment-operators"
+        ]
+        // TODO: switch to ESM after resolving https://github.com/webpack/webpack/issues/15930
+        // "modules": false
+      }
+    ],
     "@babel/preset-typescript"
   ],
   "plugins": [
