--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "tsc && babel src --out-dir dist --extensions .ts --source-maps true",
     "commitlint": "commitlint --from develop",
-    "lint": "prettier . --check && eslint . --ext .ts,.js,.mjs",
+    "lint": "prettier . --check && eslint .",
     "format": "prettier . --write",
     "test": "mocha './test/'",
     "test:watch": "mocha './test/' --watch",
@@ -49,23 +49,22 @@
     "@babel/register": "^7.21.0",
     "@commitlint/cli": "^17.5.1",
     "@commitlint/config-conventional": "^17.4.4",
+    "@eslint/js": "^9.10.0",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
     "babel-loader": "^9.1.2",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "chai": "^4.3.7",
-    "eslint": "^8.38.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint": "^9.10.0",
+    "globals": "^15.9.0",
     "memfs": "^3.5.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^3.3.3",
     "standard-version": "^9.5.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "typescript-eslint": "^8.6.0"
   },
   "files": [
     "dist",
