--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "module": "node16",
     "target": "es2020",
     "lib": ["es2020", "dom"],
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "preserveConstEnums": true,
     "declaration": true,
     "downlevelIteration": true,
