--- a/babel.config.json
+++ b/babel.config.json
@@ -6,15 +6,11 @@
         "include": [
           "@babel/plugin-proposal-nullish-coalescing-operator",
           "@babel/plugin-proposal-logical-assignment-operators"
-        ]
-        // TODO: switch to ESM after resolving https://github.com/webpack/webpack/issues/15930
-        // "modules": false
+        ],
+        "modules": false
       }
     ],
     "@babel/preset-typescript"
   ],
-  "plugins": [
-    ["@babel/plugin-transform-runtime", { "corejs": 3 }],
-    ["transform-inline-environment-variables", { "include": ["npm_package_version"] }]
-  ]
+  "plugins": [["transform-inline-environment-variables", { "include": ["npm_package_version"] }]]
 }
