--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "bin": {
     "ae-contract-builder": "dist/cli.js"
   },
+  "type": "module",
   "scripts": {
     "build": "tsc && babel src --out-dir dist --extensions .ts --source-maps true",
     "commitlint": "commitlint --from develop",
@@ -28,9 +29,9 @@
   ],
   "dependencies": {
     "@aeternity/aepp-sdk": "^13.3.3",
-    "@types/lodash": "^4.17.7",
+    "@types/lodash-es": "^4.17.12",
     "commander": "^12.1.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "schema-utils": "^4.2.0",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
@@ -43,18 +44,15 @@
     "@babel/cli": "^7.25.6",
     "@babel/core": "^7.25.2",
     "@babel/node": "^7.25.0",
-    "@babel/plugin-transform-runtime": "^7.25.4",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-typescript": "^7.24.7",
-    "@babel/register": "^7.24.6",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.10.0",
     "@types/chai": "^4.3.19",
     "@types/mocha": "^10.0.8",
-    "babel-loader": "^9.2.1",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-    "chai": "^4.3.7",
+    "chai": "^5.1.1",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
     "memfs": "^4.12.0",
@@ -62,7 +60,7 @@
     "nyc": "^17.1.0",
     "prettier": "^3.3.3",
     "standard-version": "^9.5.0",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.1",
     "typescript": "~5.5",
     "typescript-eslint": "^8.6.0"
   },
