chore(deps): update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,7 @@
     "strictNullChecks": true,
     "allowSyntheticDefaultImports": true,
     "allowImportingTsExtensions": true,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./src/typings",
-      "./node_modules/@aeternity/aepp-sdk/src/typings"
-    ]
+    "typeRoots": ["./node_modules/@types", "./node_modules/@aeternity/aepp-sdk/src/typings"]
   },
   "include": ["src/**/*"]
 }
